--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>
-    Minor WDD Enquête | <%- title %>
+    <%- title %>
   </title>
 
-  <!-- <link rel="icon" type="image/png" sizes="16x16" href="/images/gifinder_favicon.png"> -->
-  <!-- <link href="/styles/style.css" rel="stylesheet" /> -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/wdd_favicon.png">
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <link href="/styles/styles.css" rel="stylesheet" />
 
-  <script defer src="scripts/script.js"></script>
+  <script defer src="/scripts/script.js"></script>
 
 </head>
