--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -13,7 +13,7 @@
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-  <!-- <link href="/styles/styles.css" rel="stylesheet" /> -->
+  <link href="/styles/styles.css" rel="stylesheet" />
 
   <!-- <script defer src="/scripts/script.js"></script> -->
 
