--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -15,6 +15,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <link href="/styles/styles.css" rel="stylesheet" />
 
-  <!-- <script defer src="/scripts/script.js"></script> -->
+  <script defer src="/scripts/script.js"></script>
 
 </head>
