:heavy_plus_sign: Added legend to each fieldset

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,11 +1,31 @@
 <%- include('./partials/head.ejs') %>
 
-  <%- include('./partials/header.ejs') %>
+  <body>
 
-    <h1>404</h1>
-    <h2>That didn't go as planned :(</h2>
+    <%- include('./partials/header.ejs') %>
 
-    </main>
-    </body>
+      <main>
 
-    </html>
+        <form>
+
+          <ol>
+
+            <li id="details">
+              <fieldset>
+                <legend></legend>
+                <section>
+                  <h1>404</h1>
+                  <h2>That didn't go as planned :(</h2>
+                </section>
+              </fieldset>
+            </li>
+
+          </ol>
+
+        </form>
+
+  </body>
+
+  </main>
+
+  </html>
