--- a/views/details.ejs
+++ b/views/details.ejs
@@ -12,6 +12,7 @@
 
             <li id="details">
               <fieldset>
+                <legend></legend>
                 <section>
 
                   <a href="/results">Terug naar resultaten</a>
