--- a/views/end.ejs
+++ b/views/end.ejs
@@ -13,6 +13,7 @@
             <!---------- END PAGE ----------->
             <li id="end">
               <fieldset>
+                <legend></legend>
                 <span class="endVoortgang"></span>
 
                 <section>
