--- a/views/enquete.ejs
+++ b/views/enquete.ejs
@@ -13,6 +13,7 @@
             <!---------- FIRST PAGE ----------->
             <li id="index">
               <fieldset>
+                <legend></legend>
                 <section>
                   <h1>Minor Web Design & Development</h1>
                   <h2>Enquête</h2>
@@ -28,6 +29,7 @@
             <!---------- 'LOGIN' ----------->
             <li id="login">
               <fieldset>
+                <legend></legend>
                 <span class="loginVoortgang"></span>
 
                 <section>
@@ -54,6 +56,7 @@
             <!---------- WAFS ----------->
             <li id="wafs">
               <fieldset>
+                <legend></legend>
                 <span class="wafsVoortgang"></span>
 
                 <section>
@@ -76,6 +79,7 @@
             <!---------- CSSTTR ----------->
             <li id="cssttr">
               <fieldset>
+                <legend></legend>
                 <span class="cssttrVoortgang"></span>
 
                 <section>
@@ -98,6 +102,7 @@
             <!---------- PWA ----------->
             <li id="pwa">
               <fieldset>
+                <legend></legend>
                 <span class="pwaVoortgang"></span>
 
                 <section>
@@ -120,6 +125,7 @@
             <!---------- BT ----------->
             <li id="bt">
               <fieldset>
+                <legend></legend>
                 <span class="btVoortgang"></span>
 
                 <section>
@@ -142,6 +148,7 @@
             <!---------- RTW ----------->
             <li id="rtw">
               <fieldset>
+                <legend></legend>
                 <span class="rtwVoortgang"></span>
 
                 <section>
@@ -164,6 +171,7 @@
             <!---------- HCD ----------->
             <li id="hcd">
               <fieldset>
+                <legend></legend>
                 <span class="hcdVoortgang"></span>
 
                 <section>
