--- a/views/results.ejs
+++ b/views/results.ejs
@@ -13,6 +13,7 @@
             <!---------- FIRST PAGE ----------->
             <li id="results">
               <fieldset>
+                <legend></legend>
                 <section>
                   <h1>Alle Ingevulde Enquêtes</h1>
 
