:wrench: Typo fix

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -396,7 +396,7 @@ section > a:last-of-type {
   
   /* safari styles */
   -webkit-appearance: none;
-  -webkit-boxshadow: -3px 3px 0px rgba(127, 205, 123, 1);
+  -webkit-box-shadow: -3px 3px 0px rgba(127, 205, 123, 1);
 }
 
 .error {
@@ -404,7 +404,7 @@ section > a:last-of-type {
 
   /* safari styles */
   -webkit-appearance: none;
-  -webkit-boxshadow: -3px 3px 0px rgba(255, 94, 94, 1);
+  -webkit-box-shadow: -3px 3px 0px rgba(255, 94, 94, 1);
 }
 
 
